--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Stock optique PMC</title>
@@ -13,7 +8,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -30,144 +24,36 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/beamsplitters.jpg" class="image"><img src="images/beamsplitters.jpg" alt="" /></a>
+							<a href="/stock/beamsplitters" class="image"><img src="images/beamsplitters.jpg" alt="" /></a>
 							<h2>Beamsplitters</h2>
-							<table>
-								<thead>
-									<tr>
-										<th>Manufacturer</th>
-										<th>Model number</th>
-										<th>Type</th>
-										<th>Diameter</th>
-										<th>Quantity</th>
-										<th>Shape</th>
-										<th>Mounted</th>
-										<th>Localisation</th>
-										<th>Minimum operating wavelength</th>
-										<th>Maximum operating wavelength</th>
-										<th>Antireflection coating minimum wavelength</th>
-										<th>Antireflection coating maximum wavelength</th>
-										<th>Reflectance</th>
-										<th>Transmittance</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>MI6</td>
-										<td>007-Bond</td>
-										<td>Secret Agent</td>
-										<td>Secret diameter</td>
-										<td>1</td>
-										<td>Multiple</td>
-										<td>Active</td>
-										<td>In the World</td>
-										<td>0</td>
-										<td>2000</td>
-										<td>0</td>
-										<td>700</td>
-										<td>10</td>
-										<td>20</td>
-									</tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/filters.jpg" class="image"><img src="images/filters.jpg" alt="" /></a>
+							<a href="/stock/filters" class="image"><img src="images/filters.jpg" alt="" /></a>
 							<h2>Filters</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/lasers.jpg" class="image"><img src="images/lasers.jpg" alt="" /></a>
+							<a href="/stock/lasers" class="image"><img src="images/lasers.jpg" alt="" /></a>
 							<h2>Lasers</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/leds.jpg" class="image"><img src="images/leds.jpg" alt="" /></a>
+							<a href="/stock/leds" class="image"><img src="images/leds.jpg" alt="" /></a>
 							<h2>LEDs</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/lenses.jpg" class="image"><img src="images/lenses.jpg" alt="" /></a>
+							<a href="/stock/lenses" class="image"><img src="images/lenses.jpg" alt="" /></a>
 							<h2>Lenses</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/mirroirs.jpg" class="image"><img src="images/mirroirs.jpg" alt="" /></a>
+							<a href="/stock/mirrors" class="image"><img src="images/mirroirs.jpg" alt="" /></a>
 							<h2>Mirrors</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/polarisers.jpg" class="image"><img src="images/polarisers.jpg" alt="" /></a>
+							<a href="/stock/polarisers" class="image"><img src="images/polarisers.jpg" alt="" /></a>
 							<h2>Polarisers</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 						<article class="thumb">
-							<a href="images/waveplates.png" class="image" style="background-color: white;"><img src="images/waveplates.png" alt="" /></a>
+							<a href="/stock/waveplates" class="image" style="background-color: white;"><img src="images/waveplates.png" alt="" /></a>
 							<h2>Waveplates</h2>
-							<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 						</article>
 					</div>
 
@@ -177,16 +63,6 @@
 							<div>
 								<section>
 									<h2>Magna feugiat sed adipiscing</h2>
-									<table>
-								<thead>
-									<tr>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr></tr>
-								</tbody>	
-							</table>
 								</section>
 							</div>
 							<div>
@@ -218,7 +94,6 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
